# whisper-asr-webapp

./: Dockerfile  README.md  docker-compose.yml  run.sh
.github/workflows/: docker.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  server.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: Button.svelte  DropZone.svelte  LanguageSelect.svelte  ModelSelect.svelte  ModelSelectOption.svelte  Spinner.svelte  Tooltip.svelte  Transcript.svelte  UploadIcon.svelte
frontend/src/components/icons/: Bugs.svelte  CircleQuestion.svelte  Frog.svelte  Hippo.svelte  Otter.svelte  Seedling.svelte
frontend/src/types/: WhisperResult.ts
frontend/src/utils/: convert.ts  utils.ts
